name:                alice-bob
version:             0.0.1.1
synopsis:            Application for measuring netwok speed
description:         Please see README.md
homepage:            https://github.com/EvgenyNerush/alice-bob
license:             BSD3
license-file:        LICENSE
author:              Evgeny Nerush
maintainer:          eugene.nerush _at_ gmail.com
copyright:           2016 Evgeny Nerush
category:            (none)
build-type:          Simple
cabal-version:       >=1.10

executable alice-bob
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lib
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , network
                     , bytestring
                     , vector
                     , store >=0.3
